<resources>
    <string name="app_name">hue</string>

    <!-- region GENERAL TEXT -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="thread">Thread</string>
    <string name="time_format">MM/dd/yyyy</string>
    <string name="test_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="no_results_found">No results where found for your search: </string>
    <!-- endregion GENERAL TEXT -->

    <!--region LOGIN TEXTS -->
    <string name="my_main_theme">Hello</string>
    <string name="login_button_text">Login</string>
    <string name="login_user_text_view_hint">Email/Mobile</string>
    <string name="login_password_text_view_hint">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_not_member">Not a member?</string>
    <string name="login_or">OR</string>
    <string name="login_google_description">Login with Google</string>
    <string name="login_apple_description">Login with Apple</string>
    <string name="login_facebook_description">Login with Facebook</string>
    <string name="login_sign_up">Sign up now</string>
    <string name="login_forget_password">Forget password?</string>
    <!--endregion LOGIN TEXTS-->

    <!--region MAIN MENU STRINGS-->
    <string name="main_menu_search_tittle">Search</string>
    <string name="main_menu_inbox_tittle">Inbox</string>
    <string name="main_menu_profile_tittle">Profile</string>
    <!--endregion MAIN MENU STRINGS-->

    <!--region VALIDATION STRINGS-->
    <string name="invalid_text">Empty text</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <!--endregion VALIDATION STRINGS-->

    <!--region SEARCH RENT FRAGMENT-->
    <string name="search_rent_item_description">Rent Item Image</string>
    <string name="search_rent_item_example_tittle_text">This is a Tittle</string>
    <string name="search_rent_item_example_secondary_text">This is a secondary text.</string>
    <string name="search_rent_item_example_supporting_text">This is a complementary text.</string>
    <string name="search_rent_nav_label">Search for places</string>
    <string name="hello_search_fragment">Hello from search fragment</string>
    <string name="search_rent_toolbar_tittle">Search</string>
    <!--endregion SEARCH RENT FRAGMENT-->

    <!--region INBOX FRAGMENT-->
    <string name="inbox_nav_label">Messaging inbox</string>
    <string name="hello_inbox_fragment">Hello from inbox fragment</string>
    <string name="inbox_toolbar_tittle">Inbox</string>
    <string name="inbox_new_message">New message</string>
    <string name="inbox_conversation_item_example_name">Jhon Smith</string>
    <string name="inbox_conversation_item_example_location">Ensenada - Two Bedroom Apartment</string>
    <string name="inbox_conversation_item_example_time">2:30pm</string>
    <string name="inbox_conversation_item_example_conversation">Hi Jhon, hope you\'re doing well this is Daniel…</string>
    <string name="inbox_conversation_item_example_unread_notification">2</string>
    <!--endregion INBOX FRAGMENT-->

    <!--region PROFILE FRAGMENT-->
    <string name="profile_nav_label">My profile</string>
    <string name="hello_profile_fragment">Hello from profile fragment</string>
    <string name="profile_toolbar_tittle">Profile</string>
    <!--endregion PROFILE FRAGMENT-->

    <!--region CONVERSATION FRAGMENT-->
    <string name="message_example">Hello, this is a message that\'s a little longer than usual 😶‍🌫️, 🧔🏻‍♀️, 🧑🏿‍❤️‍🧑🏾</string>
    <string name="message_emoji_example">🧔</string>
    <!--endregion CONVERSATION FRAGMENT-->

</resources>