<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/nav_graph"
    app:startDestination="@id/main_unassigned_search">

    <fragment
        android:id="@id/main_unassigned_search"
        android:name="com.gig.hue.views.fragments.SearchFragment"
        android:label="@string/search_rent_nav_label"
        tools:layout="@layout/fragment_search">

    </fragment>

    <fragment
        android:id="@id/main_unassigned_inbox"
        android:name="com.gig.hue.views.fragments.InboxFragment"
        android:label="@string/inbox_nav_label"
        tools:layout="@layout/fragment_inbox">

    </fragment>

    <fragment
        android:id="@id/main_unassigned_profile"
        android:name="com.gig.hue.views.fragments.ProfileFragment"
        android:label="@string/profile_nav_label"
        tools:layout="@layout/fragment_profile">

    </fragment>

</navigation>