<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/login_background"
    tools:context=".views.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/login_icon_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:visibility="visible"
            android:layout_marginStart="@dimen/left_logo_content_margin"
            android:layout_marginEnd="@dimen/right_logo_content_margin"
            android:layout_marginTop="@dimen/top_logo_content_margin"
            android:maxHeight="@dimen/login_logo_height"
            android:maxWidth="@dimen/login_logo_width"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_card_view"
            app:srcCompat="@drawable/ic_hue_alt" />

        <com.google.android.material.card.MaterialCardView
            android:id="@id/login_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_content_margin"
            android:layout_marginEnd="@dimen/right_content_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/left_card_padding"
                android:paddingEnd="@dimen/right_card_padding"
                android:paddingBottom="@dimen/bottom_card_padding"
                android:paddingTop="@dimen/top_card_padding">

                <!--region LOGIN CARD CONTENT-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@id/login_user_layout_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/element_between_margin_small"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_round_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@id/login_user_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/login_user_text_view_hint"
                        tools:text="test_email@gmail.com"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@id/login_password_layout_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/element_between_margin_small"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_user_layout_text"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_round_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@id/login_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password_text_view_hint"
                        android:inputType="textPassword"
                        tools:ignore="TextContrastCheck"
                        tools:text="Branix123." />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/element_between_margin_large"
                    android:text="@string/login_button_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_password_layout_text"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@id/login_forget_password"
                    style="@style/CustomMaterialTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stateListAnimator="@null"
                    android:text="@string/login_forget_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_button"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@id/login_not_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_not_member"
                    android:textSize="@dimen/subtittle_text_size"
                    app:layout_constraintEnd_toStartOf="@id/login_sign_up_button"
                    app:layout_constraintTop_toBottomOf="@id/login_forget_password"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@id/login_sign_up_button"
                    style="@style/CustomMaterialTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stateListAnimator="@null"
                    android:text="@string/login_sign_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_forget_password"
                    tools:ignore="TextContrastCheck" />

                <!--endregion LOGIN CARD CONTENT-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@id/login_divider_first"
            android:layout_width="0dp"
            android:layout_height="@dimen/view_separator_height"
            android:layout_marginStart="@dimen/right_content_margin"
            android:layout_marginEnd="@dimen/left_content_margin"
            android:background="@color/secondaryLightColor"
            app:layout_constraintEnd_toStartOf="@id/login_or_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_card_view"
            app:layout_constraintBottom_toTopOf="@id/login_button_facebook"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@id/login_or_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@id/login_divider_first"
            app:layout_constraintEnd_toStartOf="@id/login_divider_second"
            app:layout_constraintStart_toEndOf="@id/login_divider_first"
            app:layout_constraintTop_toTopOf="@id/login_divider_first" />

        <View
            android:id="@id/login_divider_second"
            android:layout_width="0dp"
            android:layout_height="@dimen/view_separator_height"
            android:layout_marginStart="@dimen/right_content_margin"
            android:layout_marginEnd="@dimen/left_content_margin"
            android:background="@color/secondaryLightColor"
            app:layout_constraintBottom_toBottomOf="@id/login_divider_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_or_label"
            app:layout_constraintTop_toTopOf="@id/login_divider_first" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@id/login_button_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_between_layout_margin_xlarge"
            android:layout_marginBottom="@dimen/element_between_layout_margin_xlarge"
            android:contentDescription="@string/login_facebook_description"
            app:backgroundTint="@color/secondaryLightColor"
            app:layout_constraintTop_toBottomOf="@id/login_or_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_button_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_facebook_logo"
            app:tint="@color/facebook_primary"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@id/login_button_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_between_layout_margin_xlarge"
            android:layout_marginBottom="@dimen/element_between_layout_margin_xlarge"
            android:contentDescription="@string/login_google_description"
            app:backgroundTint="@color/secondaryLightColor"
            app:layout_constraintTop_toBottomOf="@id/login_or_label"
            app:layout_constraintStart_toEndOf="@id/login_button_facebook"
            app:layout_constraintEnd_toStartOf="@id/login_button_apple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_google_logo"
            app:tint="@null"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@id/login_button_apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_between_layout_margin_xlarge"
            android:layout_marginBottom="@dimen/element_between_layout_margin_xlarge"
            android:contentDescription="@string/login_apple_description"
            app:backgroundTint="@color/secondaryLightColor"
            app:layout_constraintTop_toBottomOf="@id/login_or_label"
            app:layout_constraintStart_toEndOf="@id/login_button_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_apple_logo"
            app:tint="@color/apple_primary"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
